just trying to fix picture stretch on carousel
indeed

--- a/carousel.css
+++ b/carousel.css
@@ -54,10 +54,16 @@ body {
 }
 .carousel-inner > .item > img {
   position: absolute;
+  /* libby added this
+  object-fit: cover;
+  overflow: hidden;
+  end of what libby added */
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 500px;
+  /* libby also added min-height and commented out the fixed height */
+  min-height: 100%;
+  /* height: 500px; */
 }
 
 
